# canteen

./: CMakeLists.txt  README.md  canteen.pro  canteenMgmt.cbp  function.cpp  function.h  index.html  main.cpp
class/: Item.cpp  Item.h  Stud.cpp  Stud.h  Student.cpp  Student.h
